[package]
name = "soroban-wasm-fuzz-test-fuzz"
version = "0.0.0"
publish = false
edition = "2021"

[package.metadata]
cargo-fuzz = true

[dependencies]
libfuzzer-sys = "0.4"
soroban-sdk.version = "20.5.0"
soroban-sdk.features = ["testutils"]

[features]
testutils = []

[dependencies.soroban-wasm-fuzz-test]
path = ".."

# Prevent this from interfering with workspaces
[workspace]
members = ["."]

[profile.release]
debug = 1

[[bin]]
name = "fuzz_target_1"
path = "fuzz_targets/fuzz_target_1.rs"
test = false
doc = false

[patch.crates-io]
soroban-wasmi.path = "../../wasmi/crates/wasmi"
